@@ -22,7 +22,6 @@ package io.jitstatic;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -77,7 +76,8 @@ public class SourceExtractor {
         if (ObjectId.zeroId().equals(branchRef.getObjectId())) {
             return null;
         }
-        final Pair<Pair<AnyObjectId, Set<Ref>>, List<BranchData>> source = fileLoader(Pair.of(branchRef.getObjectId(), Collections.singleton(branchRef)), key);
+        final Pair<Pair<AnyObjectId, Set<Ref>>, List<BranchData>> source = fileLoader(Pair.of(branchRef.getObjectId(), Set.of(branchRef)),
+                key);
         final List<BranchData> sourceInfo = source.getRight();
         final BranchData repositoryData = sourceInfo.get(0);
         final Pair<MetaFileData, SourceFileData> pair = repositoryData.getFirstPair(key);
@@ -101,26 +101,30 @@ public class SourceExtractor {
         return branchRef;
     }
 
-    public Pair<Pair<AnyObjectId, Set<Ref>>, List<BranchData>> sourceTestBranchExtractor(final String branchName) throws IOException, RefNotFoundException {
+    public Pair<Pair<AnyObjectId, Set<Ref>>, List<BranchData>> sourceTestBranchExtractor(final String branchName)
+            throws IOException, RefNotFoundException {
         if (!Objects.requireNonNull(branchName).startsWith(JitStaticConstants.REFS_JISTSTATIC)) {
             throw new RefNotFoundException(branchName);
         }
         return sourceGeneralExtractor(branchName);
     }
 
-    private Pair<Pair<AnyObjectId, Set<Ref>>, List<BranchData>> sourceGeneralExtractor(final String branchName) throws IOException, RefNotFoundException {
+    private Pair<Pair<AnyObjectId, Set<Ref>>, List<BranchData>> sourceGeneralExtractor(final String branchName)
+            throws IOException, RefNotFoundException {
         final Ref branchRef = findBranch(branchName);
-        return fileLoader(Pair.of(branchRef.getObjectId(), Collections.singleton(branchRef)));
+        return fileLoader(Pair.of(branchRef.getObjectId(), Set.of(branchRef)));
     }
 
-    public Pair<Pair<AnyObjectId, Set<Ref>>, List<BranchData>> sourceBranchExtractor(final String branchName) throws IOException, RefNotFoundException {
+    public Pair<Pair<AnyObjectId, Set<Ref>>, List<BranchData>> sourceBranchExtractor(final String branchName)
+            throws IOException, RefNotFoundException {
         if (!Objects.requireNonNull(branchName).startsWith(Constants.R_HEADS)) {
             throw new RefNotFoundException(branchName);
         }
         return sourceGeneralExtractor(branchName);
     }
 
-    private Pair<Pair<AnyObjectId, Set<Ref>>, List<BranchData>> fileLoader(final Pair<AnyObjectId, Set<Ref>> referencePoint, final String key) {
+    private Pair<Pair<AnyObjectId, Set<Ref>>, List<BranchData>> fileLoader(final Pair<AnyObjectId, Set<Ref>> referencePoint,
+            final String key) {
         final List<BranchData> files = new ArrayList<>();
         final AnyObjectId reference = referencePoint.getLeft();
         try (final RevWalk rev = new RevWalk(repository)) {
@@ -129,7 +133,8 @@ public class SourceExtractor {
             files.add(walkTree(currentTree, key));
             rev.dispose();
         } catch (final IOException e) {
-            files.add(new BranchData(new RepositoryDataError(new FileObjectIdStore(key, reference.toObjectId()), new InputStreamHolder(e))));
+            files.add(
+                    new BranchData(new RepositoryDataError(new FileObjectIdStore(key, reference.toObjectId()), new InputStreamHolder(e))));
         }
         return Pair.of(referencePoint, files);
     }
@@ -153,18 +158,7 @@ public class SourceExtractor {
                         final String path = treeWalker.getPathString();
                         final InputStreamHolder inputStreamHolder = getInputStreamFor(objectId);
                         final FileObjectIdStore fileObjectIdStore = new FileObjectIdStore(path, objectId);
-                        final Path p = Path.of(path);
-                        if (p.getLastElement().equals(JitStaticConstants.METADATA) || !p.getLastElement().startsWith(".")) {
-                            if (path.endsWith(JitStaticConstants.METADATA)) {
-                                if (p.getLastElement().equals(JitStaticConstants.METADATA)) {
-                                    metaFiles.put(path, new MetaFileData(fileObjectIdStore, inputStreamHolder));
-                                } else {
-                                    metaFiles.put(path.substring(0, path.length() - METADATA_LENGTH), new MetaFileData(fileObjectIdStore, inputStreamHolder));
-                                }
-                            } else {
-                                dataFiles.put(path, new SourceFileData(fileObjectIdStore, inputStreamHolder));
-                            }
-                        }
+                        matchKeys(metaFiles, dataFiles, path, inputStreamHolder, fileObjectIdStore);
                     }
                 } else {
                     treeWalker.enterSubtree();
@@ -176,13 +170,31 @@ public class SourceExtractor {
         return new BranchData(metaFiles, dataFiles, error);
     }
 
+    private void matchKeys(final Map<String, MetaFileData> metaFiles, final Map<String, SourceFileData> dataFiles, final String path,
+            final InputStreamHolder inputStreamHolder, final FileObjectIdStore fileObjectIdStore) {
+        final Path p = Path.of(path);
+        if (p.getLastElement().equals(JitStaticConstants.METADATA) || !p.getLastElement().startsWith(".")) {
+            if (path.endsWith(JitStaticConstants.METADATA)) {
+                if (p.getLastElement().equals(JitStaticConstants.METADATA)) {
+                    metaFiles.put(path, new MetaFileData(fileObjectIdStore, inputStreamHolder));
+                } else {
+                    metaFiles.put(path.substring(0, path.length() - METADATA_LENGTH),
+                            new MetaFileData(fileObjectIdStore, inputStreamHolder, true));
+                }
+            } else {
+                dataFiles.put(path, new SourceFileData(fileObjectIdStore, inputStreamHolder));
+            }
+        }
+    }
+
     private TreeFilter getTreeFilter(final String key) {
         final Path path = Path.of(key);
         final TreeFilter pfg;
         if (path.isDirectory()) {
             pfg = PathFilterGroup.createFromStrings(key + JitStaticConstants.METADATA);
         } else {
-            pfg = PathFilterGroup.createFromStrings(key, key + JitStaticConstants.METADATA, path.getParentElements() + JitStaticConstants.METADATA);
+            pfg = PathFilterGroup.createFromStrings(key, key + JitStaticConstants.METADATA,
+                    path.getParentElements() + JitStaticConstants.METADATA);
         }
         return pfg;
     }
@@ -202,9 +214,10 @@ public class SourceExtractor {
     public Map<Pair<AnyObjectId, Set<Ref>>, List<BranchData>> extractAll() {
         final Map<AnyObjectId, Set<Ref>> allRefs = repository.getAllRefsByPeeledObjectId();
         return allRefs.entrySet().stream().map(e -> {
-            final Set<Ref> refs = e.getValue().stream().filter(ref -> !ref.isSymbolic()).filter(ref -> ref.getName().startsWith(Constants.R_HEADS))
-                    .collect(Collectors.toSet());
+            final Set<Ref> refs = e.getValue().stream().filter(ref -> !ref.isSymbolic())
+                    .filter(ref -> ref.getName().startsWith(Constants.R_HEADS)).collect(Collectors.toSet());
             return Pair.of(e.getKey(), refs);
-        }).map(this::fileLoader).collect(Collectors.toConcurrentMap(branchErrors -> branchErrors.getLeft(), branchErrors -> branchErrors.getRight()));
+        }).map(this::fileLoader)
+                .collect(Collectors.toConcurrentMap(branchErrors -> branchErrors.getLeft(), branchErrors -> branchErrors.getRight()));
     }
 }
